--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "reactflow": "^11.11.3",
     "sass": "^1.77.2"
